--- a/style.css
+++ b/style.css
@@ -99,6 +99,8 @@ body {
 .container .message {
   text-align: center;
   margin: 20px 0;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .container .form button {
